[package]
name = "modernweb-booth-question"
version = "0.1.0"
authors = ["Tzu-Yin Hong <lili668668@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
colored = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.wasm-bindgen]
version = "0.2.45"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
