[package]
name = "modernweb-booth-question"
version = "0.1.0"
authors = ["Tzu-Yin Hong <lili668668@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
colored = "1.8.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.once_cell]
version =  "0.2.7"
default-features = false

[dependencies.wasm-bindgen]
version = "0.2.45"
features = ["serde-serialize"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quote = "1.0.2"
